--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,14 +21,14 @@
         <p>
             本站总访问量<span id="busuanzi_value_site_pv"></span>次，本站访客数<span id="busuanzi_value_site_uv"></span>人次，本文总阅读量<span id="busuanzi_value_page_pv"></span>次
         </p>
-<!--         <p class="power">
+        <p class="power">
             <span>
                 Site powered by <a href="https://jekyllrb.com/">Jekyll</a> & <a href="https://pages.github.com/">Github Pages</a>.
             </span>
             <span>
                 Theme designed by <a href="https://github.com/Gaohaoyang">HyG</a>.
             </span>
-        </p> -->
+        </p>
     </div>
 </footer>
 <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"></script>
